ecmascript/parser/tests/jsx/errors/wrong-closing-tag-fragment/input.js.stderr
error: Unexpected eof
 --> $DIR/tests/jsx/errors/wrong-closing-tag-fragment/input.js:1:15
  |
1 | <></something>
  |               ^

